# talk

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  cv.ipynb  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.yml  environment.yml  inspect_dataset.py  nginx.conf  nginx.dev.conf  notes.json  predict.py  project.toml  pyproject.toml  requirements.txt  run.bat  run.ps1  run.sh  solution.py  train.py  train_classifier.py
backend/: README.md
backend/app/: __init__.py  config.py  jobs.py  main.py  processor.py  schemas.py  storage.py
backend/tests/: test_api.py  test_classification.py  test_manual_talc_edits.py  test_storage.py  test_tiling.py
configs/: classifier.yaml  deeplabv3.yaml  segformer.yaml
cv_analysis/: __init__.py  post_segformer.py  post_segformer.yaml  sulfide_candidates.py  sulfide_candidates.yaml
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: AmbientMineral.tsx  App.tsx  Charts.tsx  ImageViewer.tsx  ProgressPanel.tsx  Workspace.tsx  api.ts  demo.ts  styles.css  types.test.ts  types.ts
ore_classifier/: inspection.py  model.py
scripts/: check-infra.sh  tune_talc_cv.py
talc_analysis/: cv_pipeline.py  default_config.yaml  models.py  results.py
talkseg/: __init__.py  config.py  data.py  inference.py  models.py  training.py  visualization.py
test/: photometric_tests.yaml  run_photometric_tests.py
