[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "talkseg"
version = "0.1.0"
description = "Small-data semantic segmentation pipeline"
requires-python = ">=3.10,<3.14"
dependencies = [
  "torch>=2.3,<3",
  "torchvision>=0.18,<1",
  "segmentation-models-pytorch>=0.5,<0.6",
  "albumentations>=2.0,<3",
  "opencv-python-headless>=4.10,<5",
  "Pillow>=10,<13",
  "PyYAML>=6,<7",
  "tqdm>=4.66,<5",
]

[tool.setuptools.packages.find]
include = ["talkseg*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
